src/test/resources/de/cd4analysis/cocos/invalid/U0454.cd
package de.cd4analysis.cocos;

classdiagram U0454 {
  class C1 {
    String Attr;
  }  
}